k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-api
  namespace: project9
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-api
  template:
    metadata:
      labels:
        app: news-api
    spec:
      containers:
        - name: news-api
          image: tawa123/news-api:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 2
