k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: news-api-service
  namespace: project9
spec:
  selector:
    app: news-api
  ports:
    - name: http
      port: 80
      targetPort: 5000
