k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-api-ingress
  namespace: project9
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /news
            pathType: Prefix
            backend:
              service:
                name: news-api-service
                port:
                  number: 80
